gitignore pls work

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /Ludumdare46/[Bb]uilds/*
 /Ludumdare46/[Ll]ogs/*
 /Ludumdare46/[Uu]ser[Ss]ettings/*
+/Ludumdare46/Library/ArtifactDB
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
